gpt대화 화면으로 가는 버튼 추가 테스트용 대화 액티비티 추가

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -51,5 +51,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="운동종료" />
+    <Button
+        android:id="@+id/gptButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="gpt테스트" />
 
 </LinearLayout>
