매칭해제버튼 - 매칭목록에서 삭제 매칭등록시 매칭등록버튼안보임

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -26,6 +26,12 @@
         android:layout_height="wrap_content"
         android:text="매칭등록" />
     <Button
+        android:id="@+id/unmatchingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="매칭해제" />
+    <Button
         android:id="@+id/findmatchingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
