--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -57,4 +57,10 @@
         android:layout_height="wrap_content"
         android:text="gpt테스트" />
 
+    <Button
+        android:id="@+id/alarmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="알람" />
+
 </LinearLayout>
