--- a/app/src/main/res/layout/activity_myinfo.xml
+++ b/app/src/main/res/layout/activity_myinfo.xml
@@ -1,93 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/myinfo_background"
+    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Myinfo" >
+    android:padding="40dp"
+    tools:context=".Myinfo">
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/myinfo_art"
+        android:layout_marginBottom="20dp"
+        android:scaleType="fitCenter"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="age: " />
+            android:textColor="#FFFFFF"
+            android:text="age:      " />
 
         <EditText
             android:id="@+id/editText_age"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="text"
-            />
-
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textView_height"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="height: " />
-        <EditText
-            android:id="@+id/editText_height"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="text"
+            android:textColor="#FFFFFF"
+            android:text="height:  "
             />
 
+        <EditText
+            android:id="@+id/editText_height"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="text" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textView_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="weight: " />
+
         <EditText
             android:id="@+id/editText_weight"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="text"
-            />
-
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textView_userid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="userid: " />
+
         <EditText
             android:id="@+id/editText_userid"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="text"
-            />
-
+            android:inputType="text" />
     </LinearLayout>
 
     <Button
         android:id="@+id/editButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="완료" />
+        android:layout_height="50dp"
+        android:background="@drawable/myinfo_button"
+        android:text="완료"
+        android:layout_marginTop="150dp" />
 
 </LinearLayout>
