--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -1,76 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        >
-
+        android:background="@drawable/item_result_round_layout_border"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/resultNickname"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:text="김철수"
-            android:textSize="20dp"
-            android:padding="10dp"
+            android:padding="10dp" />
 
-            />
         <TextView
             android:id="@+id/resultAge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
             android:text="40"
-            android:textSize="20dp"
-            />
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 세  "
-            android:textSize="20dp"
-            />
+            android:layout_marginEnd="16dp"
+            android:text="세"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/resultHeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
             android:text="190"
-            android:textSize="20dp"
-            />
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" CM  "
-            android:textSize="20dp"/>
+            android:layout_marginEnd="16dp"
+            android:text="CM"
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/resultWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
             android:text="80"
-            android:textSize="20dp"
-            />
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" KG  "
-            android:textSize="20dp"/>
+            android:layout_marginEnd="16dp"
+            android:text="KG"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/button_matching"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="48dp"
+            android:layout_weight="0"
+            android:background="@drawable/item_result_round_btn"
             android:text="매칭" />
-
     </LinearLayout>
-
 </LinearLayout>
